# PomeronHVQCD

./: .gitignore  CMakeLists.txt  Makefile  computeReggeTrajectories.sh  findKernelIntercepts_meson_intercept.txt  fitAllSigma3Gluon1Meson.txt  fitAllSigmaGluonKernel.txt  fitAllSigmaKernelFixedAs.txt  fitAllSigmaKernelFixedBs.txt  fitAllSigmaKernelFixedCs.txt  fitAllSigmaKernelFixedDs.txt  fitAllSigmaKernelFixedEs.txt  fitCrossSectionsKernelFixed.sh  predictCrossSections.sh  predictSigmaGammaGammaGluonKernel.txt  predictSigmaGammaProtonGluonKernel.txt  predictSigmaProtonProtonGluonKernel.txt  regge_trajectories_KernelFixed_As_gluon.txt  regge_trajectories_KernelFixed_As_meson.txt  regge_trajectories_KernelFixed_Bs_gluon.txt  regge_trajectories_KernelFixed_Bs_meson.txt  regge_trajectories_KernelFixed_Cs_meson.txt  regge_trajectories_KernelFixed_Ds_gluon.txt  regge_trajectories_KernelFixed_Ds_meson.txt  sigma_gg_3gluon_1meson_pred.txt  sigma_gg_pred_As.txt  sigma_gg_pred_Bs.txt  sigma_gg_pred_Cs.txt  sigma_gg_pred_Ds.txt  sigma_gg_pred_Es.txt  sigma_gp_3gluon_1meson_pred.txt  sigma_gp_pred_As.txt  sigma_gp_pred_Bs.txt  sigma_gp_pred_Cs.txt  sigma_gp_pred_Ds.txt  sigma_gp_pred_Es.txt  sigma_pp_pred_As.txt  sigma_pp_pred_Bs.txt  sigma_pp_pred_Cs.txt  sigma_pp_pred_Ds.txt  (+1 more)
Mathematica/: General_Vf_fit_conditions.nb  Pseudoscalars.nb  Scalars.nb  SpinJ_EOMs.nb  VectorField_HVQCD.nb  general_background_eoms.nb  testJarvinen.nb
expdata/: F2_data_Q2max_10.txt  F2_rawdata.txt
expdata/DIS/: FL_data_Q2max_10.txt
expdata/SigmaGammaGamma/: gammagamma_TPC_data.tar  sigma_gg_analysis.ipynb
expdata/SigmaGammaProton/: sigma_gp_analysis.ipynb
expdata/SigmaProtonProton/: sigma_pp_analysis.ipynb
include/: DeepInelasticScattering.h  F2.h  F2Photon.h  FL.h  HQCDP.h  HVQCD.h  HolographicVQCD.h  MesonKernel.h  Process.h  Sigma.h  SigmaGammaGamma.h  U1NNMode.h  YangMills.h  background.h
include/methods/: rootFind.hpp  search.hpp  vectorOperators.hpp
include/schrodinger/: chebspec.h  common.h  matrixNumerov.h  schrodinger.h  solvspec.h
notes/: Spectrum_HVQCD.tex  Spectrum_HVQCD.toc
notes/bib/: HQCD.bib  HVQCD.bib
physics/: HVQCDRatios.cpp  HVQCDRatiosWitha0.cpp  HVQCDSpectrum.cpp  HVQCD_mass_ratios.cpp  comparePotentialsWithMatti.cpp  computeReggeTrajectories.cpp  findGs.cpp  findKernelIntercepts.cpp  findReggeTrajectories.cpp  fitAllSigma.cpp  fitAllSigma3Gluon1Meson.cpp  fitAllSigma4Gluon1Meson.cpp  fitAllSigmaFixedKernel.cpp  fitAllSigmaGluonKernelFixed.cpp  fitBackground_kU1_not_fixed.cpp  fitDISHVQCD.cpp  fitDISHVQCDGluonKernelOnly.cpp  fitDISHVQCDKernelFixed.cpp  fitF2.cpp  fitF2GluonKernel.cpp  fitF2GluonKernelFixed.cpp  fitF2MesonKernel.cpp  fitFLSigmaGammaProton.cpp  fitFLSigmaGammaProtonGluonKernel.cpp  fitFLSigmaGammaProtonGluonKernelFixed.cpp  fitFLSigmaGammaProtonKernelFixed.cpp  fitGammaProtonGluonKernel.cpp  fitGammaProtonGluonKernelFixed.cpp  fitHVQCDAllWithf2.cpp  fitHVQCDAllWithf2_a1_a2_fixed.cpp  fitHVQCDGlobal.cpp  fitHVQCDGlobalTachyonNormalized.cpp  fitHVQCDGlobalWitha0.cpp  fitHVQCDGlobalWitha0TachyonNormalized.cpp  fitHVQCDGlobalWitha0_a1_0_a2_1_fixed.cpp  fitHVQCDGlobalWitha0_a1_a2_fixed.cpp  fitHVQCDGlobal_a1_0_a2_1_fixed.cpp  fitHVQCDGlobal_a1_a2_fixed.cpp  fitHVQCDGlobal_sc_VgIR_a1_a2_fixed.cpp  fitHVQCDGlobal_sc_VgIR_fixed.cpp  (+34 more)
plots/: BackgroundFields_Table7.txt  BackgroundFields_Table8.txt  BackgroundPotentials_Table3.txt  BackgroundPotentials_Table4.txt  BackgroundPotentials_Table7.txt  SchrodingerPotentials_Table4.txt  SchrodingerPotentials_Table5.txt  SchrodingerPotentials_Table6.txt  SchrodingerPotentials_Table7.txt  mesons_regge_trajectories.ipynb  potential_plots.ipynb  regge_trajectories.ipynb  two_derivatives_terms.txt  two_derivatives_terms_plots.ipynb
plots/DIS/: BackgroundFields.txt  BackgroundPotentials.txt  PotFactor_vs_u.ipynb  PotInterpolationProfiles.txt  PotProfiles.txt  SchrodingerPotentials.txt  plotF2.py  plotFL.py
plots/Regge_Trajectories/: meson_trajectory_exp.txt  regge_traj_Bs.txt  regge_trajectories.ipynb  regge_trajectories_Invls_gluon.txt  regge_trajectories_Invls_meson.txt  regge_trajectories_meson_masses_meson.txt  (+8 more)
results/: HVQCDRatios_Global_a1_a2_fixed.txt  computeReggeTrajectoriesMesonIntercept.txt  computeReggeTrajectoriesMesonInterceptBarnes.txt  computeReggeTrajectoriesMesonMasses.txt  findKernelIntercepts_meson_intercept_barnes.txt  findKernelIntercepts_meson_masses.txt  fitAllSigmaFixedKernelAs.txt  fitAllSigmaFixedKernelBs.txt  fitAllSigmaFixedKernelCs.txt  fitAllSigmaFixedKernelDs.txt  fitAllSigmaFixedKernelEs.txt  fitAllSigmaFixedKernel_N_1000.txt  fitAllSigmaFixedKernel_N_400.txt  fitAllSigmaFixedKernel_N_800.txt  fitAllSigma_N_400.txt  fitF2GluonKernel.txt  fitFLSigmaGammaProton.txt  fitFLSigmaGammaProtonGluonKernel.txt  fitFLSigmaGammaProtonGluonKernel_2.txt  fitGammaProtonGluonKernel.txt  fitSigmaGammaGammaKernelFixed_N_1000.txt  fitSigmaGammaGammaKernelFixed_N_400.txt  fitSigmaGammaGammaKernelFixed_N_800.txt  fitSigmaGammaProtonKernelFixed_N_1000.txt  fitSigmaGammaProtonKernelFixed_N_400.txt  fitSigmaGammaProtonKernelFixed_N_800.txt  fitSigmaProtonProtonKernelFixed_N_1000.txt  fitSigmaProtonProtonKernelFixed_N_400.txt  fitSigmaProtonProtonKernelFixed_N_800.txt  mesonMassesAs.txt  mesonMassesBs.txt  mesonMassesCs.txt  mesonMassesDs.txt  mesonMassesEs.txt  predictSigmaGammaGamma3Gluon1Meson.txt  predictSigmaGammaProton3Gluon1Meson.txt  predictSigmaProtonProton3Gluon1Meson.txt  regge_traj_As.txt  regge_traj_Cs.txt  regge_traj_Ds.txt  (+6 more)
src/: DeepInelasticScattering.cpp  F2.cpp  F2Photon.cpp  FL.cpp  GluonKernel.cpp  HQCDP.cpp  HVQCD.cpp  HolographicVQCD.cpp  Kernel.cpp  MesonKernel.cpp  Process.cpp  ProcessObservable.cpp  ScalarSingletMesons.cpp  Sigma.cpp  SigmaGammaGamma.cpp  SigmaGammaProton.cpp  SigmaProtonProton.cpp  U1NNMode.cpp  YangMills.cpp  background.cpp
tests/: test_AdS_colnew.cpp  test_BckPotFactor.cpp  test_HVQCD.cpp  test_Kernel.cpp  test_NelderMead.cpp  test_Poly_Interp_assignment.cpp  test_SigmaProtonProton.cpp  test_U1NNMode.cpp  test_Wf.cpp  test_gauss_kronrod_boost.cpp  test_schrodinger.cpp
(+220 files in other folders)
